Init sync
